--- a/views/admin-login.ejs
+++ b/views/admin-login.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <!-- Basic -->
     <meta charset="utf-8" />
@@ -13,13 +14,16 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Admin-Login</title>
+    <title> मे श्री बाबुराव महादू घोडके सराफ</title>
 
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
-    <!-- bootstrap core css -->
+    <!-- mdb -->
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -28,13 +32,54 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Poppins:400,600,700&display=swap"
         rel="stylesheet">
     <!-- Custom styles for this template -->
+
     <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
 
+    <style>
+        #recentItemsContainer {
+            display: block;
+            opacity: 0;
+        }
+    </style>
+
 </head>
 
 <body>
+        <!-- Social media start -->
+        <section class="d-flex justify-content-center justify-content-lg-between pl-1 mt-1 border-bottom ">
+            <!-- Left -->
+            <div class="me-5 d-none d-lg-block">
+                <span class="brand-name">मे श्री बाबुराव महादू घोडके सराफ</span>
+            </div>
+    
+            <!-- Right -->
+            <div class="top-navbar">
+                <a href="tel:+91 7888124488" target="_blank" class="me-4 text-reset">
+                    <i class="fas fa-phone"></i>
+                </a>
+                <a href="https://www.facebook.com/BmGhodkeJewellers?mibextid=2JQ9oc" target="_blank"
+                    class="me-4 text-reset">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://www.instagram.com/ms_baburao_mahadu_ghodke_saraf?igsh=aWF3eTgxemlpbzh4" target="_blank"
+                    class="me-4 text-reset">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://wa.me/7888124488" target="_blank" class="me-4 text-reset">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+                <a href="" class="me-4 text-reset" target="_blank">
+                    <i class="fab fa-telegram"></i>
+                </a>
+                <a href="admin-login" class="me-4 text-reset" target="_blank">
+                    <i class="fas fa-circle-user"></i>
+                </a>
+            </div>
+            <!-- Right -->
+        </section>
+        <!-- Social media end -->
 
     <header class="header_section">
         <!-- navigation start -->
@@ -43,27 +88,26 @@
                 <ul class="nav">
                     <li class="nav-item">
                         <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link active"
-                            aria-current="page" href="index.html">Home</a>
+                            aria-current="page" href="\">Home</a>
                     </li>
                     <li class="nav-item">
                         <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
-                            href="jewellery.html">Products</a>
+                            href="jewellery">Products</a>
                     </li>
                 </ul>
-                <a href="index.html">
+                <a href="\">
                     <img src="images/logo.png" alt="logo.png" class="logo">
                 </a>
                 <ul class="nav">
                     <li class="nav-item">
                         <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
-                            href="about.html">About</a>
+                            href="about">About</a>
                     </li>
                     <li class="nav-item">
                         <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
-                            href="Schemes.html">what we offer</a>
+                            href="Schemes">what we offer</a>
                     </li>
                 </ul>
-
             </nav>
         </div>
         <!-- nevigation end -->
@@ -109,95 +153,151 @@
         </div>
     </section>
     <!-- Login End -->
-
-    <!-- info section -->
-    <section class="info_section ">
-        <div class="container">
-            <div class="info_container">
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="info_logo">
-                            <a href="">
-                                <img src="images/logo.png" alt="">
-                                <span>
-                                    मे श्री बाबुराव महादू घोडके सराफ
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="info_contact">
-                            <a href="">
-                                <img src="images/location.png" alt="">
-                                <span>
-                                    Baburao mahadu Ghodke Saraf (BMG),
-                                    Bazar Peth, Lasalgaon,
-                                    Tal- Niphad, Dist- Nasik
-                                    Maharastra.
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="info_contact">
-                            <a href="">
-                                <img src="images/phone.png" alt="">
-                                <span>
-                                    +91 7888124488
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="info_contact">
-                            <a href="">
-                                <img src="images/mail.png" alt="">
-                                <span>
-                                    bmg.saraf@gmail.com
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="info_social">
-                    <div class="d-flex justify-content-center">
-                        <h5 class="info_heading">
-                            Follow Us
-                        </h5>
-                    </div>
-                    <div class="social_box">
-                        <a href="https://www.instagram.com/ms_baburao_mahadu_ghodke_saraf?igsh=aWF3eTgxemlpbzh4">
-                            <img src="images/insta.png" alt="">
-                        </a>
-                        <a href="https://www.facebook.com/BmGhodkeJewellers?mibextid=2JQ9oc">
-                            <img src="images/fb.png" alt="">
-                        </a>
-                        <a href="">
-                            <img src="images/twitter.png" alt="">
-                        </a>
-                        <a href="">
-                            <img src="images/linkedin.png" alt="">
-                        </a>
-                    </div>
-                </div>
+    
+    <!-- Footer -->
+    <footer class="text-center text-lg-start text-muted">
+        <!-- Section: Social media -->
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+            <!-- Left -->
+            <div class="me-5 d-none d-lg-block">
+                <span>Get connected with us on social networks:</span>
             </div>
-        </div>
-    </section>
-    <!-- end info_section -->
+            <!-- Left -->
 
-    <!-- footer section -->
-    <section class="container-fluid footer_section">
-        <p>
-            &copy; <span id="displayYear"></span> All Rights Reserved By
-            <a href="https://html.design/">BMGhodakejewellers</a>
-        </p>
-    </section>
-    <!-- footer section -->
+            <!-- Right -->
+            <div>
+                <a href="tel:+91 7888124488" target="_blank" class="me-4 text-reset">
+                    <i class="fas fa-phone"></i>
+                </a>
+                <a href="https://www.facebook.com/BmGhodkeJewellers?mibextid=2JQ9oc" target="_blank"
+                    class="me-4 text-reset">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://www.instagram.com/ms_baburao_mahadu_ghodke_saraf?igsh=aWF3eTgxemlpbzh4" target="_blank"
+                    class="me-4 text-reset">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://wa.me/7888124488" target="_blank" class="me-4 text-reset">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+                <a href="" class="me-4 text-reset" target="_blank">
+                    <i class="fab fa-telegram"></i>
+                </a>
+                <a href="" class="me-4 text-reset" target="_blank">
+                    <i class="fas fa-circle-user"></i>
+                </a>
+            </div>
+            <!-- Right -->
+        </section>
+        <!-- Section: Social media -->
+
+        <!-- Section: Links  -->
+        <section class="">
+            <div class="container text-center text-md-start mt-5">
+                <!-- Grid row -->
+                <div class="row mt-3">
+                    <!-- Grid column address -->
+                    <div class="col-md-6 col-lg-4 col-xl-4 mx-auto mb-4">
+                        <!-- Links -->
+                        <h5 class="text-uppercase fw-bold mb-4">
+                            Address
+                        </h5>
+                        <p>
+                            Zenda Chowk, Bazaar Peth, <br>
+                            Lasalgaon, Tel-Niphad, <br>
+                            Dist-Nashik, Maharashtra 422306
+                        </p>
+                    </div>
+                    <!-- Grid column address -->
+
+                    <!-- Grid column contact -->
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <!-- Links -->
+                        <h5 class="text-uppercase fw-bold mb-4">Contact</h5>
+                        <hr>
+                        <p>
+                            <i class="fas fa-envelope me-3"></i>
+                            <a class="text-reset" href="mailto:info@example.com">bmg.saraf@gmail.com</a>
+                        </p>
+                        <p><i class="fas fa-phone me-3"></i> <a class="text-reset" href="tel:+91 7888124488">+91
+                                7888124488</a></p>
+                    </div>
+                    <!-- Grid column contact -->
+
+                    <!-- Grid column products -->
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+                        <h5 class="text-uppercase fw-bold mb-4">
+                            Products
+                        </h5>
+                        <p>
+                            <a href="jewellery#Regular" class="text-reset">Regular</a>
+                        </p>
+                        <p>
+                            <a href="jewellery#Temple" class="text-reset">Temple</a>
+                        </p>
+                        <p>
+                            <a href="jewellery#Kundan" class="text-reset">Kundan</a>
+                        </p>
+                        <p>
+                            <a href="jewellery#Diamond" class="text-reset">Diamond</a>
+                        </p>
+                        <p>
+                            <a href="jewellery#Kisna" class="text-reset">Kisna</a>
+                        </p>
+                        <p>
+                            <a href="jewellery#Silver" class="text-reset">Silver</a>
+                        </p>
+
+                    </div>
+                    <!-- Grid column products -->
+
+                    <!-- Grid column navigation -->
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+                        <h5 class="text-uppercase fw-bold mb-4">
+                            Useful links
+                        </h5>
+                        <p>
+                            <a href="#!" class="text-reset">Home</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">About Us</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Our Products</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Our Schemes</a>
+                        </p>
+                    </div>
+                    <!-- Grid column navigation -->
+                </div>
+                <!-- Grid row -->
+            </div>
+        </section>
+        <!-- Section: Links  -->
+
+        <!-- Copyright -->
+        <section class="container-fluid footer_section" style="background-color: #F8E8C7;">
+            <p>
+                &copy; <span id="displayYear"></span> All Rights Reserved By
+                <a href="#">BMGhodakejewellers</a>
+            </p>
+        </section>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+
+    <script src="path/to/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
-    <!-- <script src="js/admin-login.js"></script> -->
+    <script src="js/index.js"></script>
+    <script src="js/back_to_top.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 </body>
 
