--- a/views/jewellery.ejs
+++ b/views/jewellery.ejs
@@ -90,7 +90,7 @@
         </button>
 
         <!-- Navigation items -->
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav" style="margin-top: 5px;">
           <ul class="navbar-nav" style="background-color: #F8E8C7;">
             <li class="nav-item">
               <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link active" aria-current="page"
