--- a/views/Schemes.ejs
+++ b/views/Schemes.ejs
@@ -92,23 +92,23 @@
                 </button>
 
                 <!-- Navigation items -->
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse collaps-navbar " id="navbarNav" style="margin-top: 5px;">
                     <ul class="navbar-nav" style="background-color: #F8E8C7;">
                         <li class="nav-item">
                             <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link active"
-                                aria-current="page" href="#">Home</a>
+                                aria-current="page" href="\">Home</a>
                         </li>
                         <li class="nav-item">
                             <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
-                                href="#products">Latest Arrived</a>
+                                href="#dhan">Dhan Sanchay</a>
                         </li>
                         <li class="nav-item">
                             <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
-                                href="#about">About</a>
+                                href="#ssi">Gold Bhishi</a>
                         </li>
                         <li class="nav-item">
                             <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
-                                href="#schemes">What We Offer</a>
+                                href="#ssy">Gold SIP</a>
                         </li>
                     </ul>
                     <a href="/">
@@ -118,15 +118,15 @@
                     <ul class="navbar-nav" style="background-color: #F8E8C7;">
                         <li class="nav-item">
                             <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
-                                href="#schemesContainer">Our Ongoing Schemes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
-                                href="#testimonial">Testimonials</a>
+                                href="#enq">Enquire Schemes</a>
                         </li>
                         <li class="nav-item">
                             <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
                                 href="#contact">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
+                                href="#socialmedia">Follow Us</a>
                         </li>
                         <li class="nav-item">
                         </li>
@@ -305,13 +305,59 @@
         <br><br>
 
     </section>
-
+        <!-- contact section -->
+        <section id="enq" class="contact_section layout_padding">
+            <div class="design-box">
+                <img src="images/design-2.png" alt="">
+            </div>
+            <div class="container ">
+                <div class="">
+                    <h2 class="">
+                        Enquire a scheme
+                    </h2>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <form action="">
+                            <div>
+                                <select class="custom-select mb-3 border-0" id="schemeSelect" name="scheme" style="background-color: #F8E8C7; height : 50px">
+                                    <option selected>Select Scheme</option>
+                                    <option value="Dhan Sanchay">Dhan Sanchay</option>
+                                    <option value="Gold Bhishi">Gold Bhishi</option>
+                                    <option value="Gold SIP">Gold SIP</option>
+                                </select>
+                            </div>
+                            <div>
+                                <input type="text" placeholder="Name" />
+                            </div>
+                            <div>
+                                <input type="email" placeholder="Email" />
+                            </div>
+                            <div>
+                                <input type="text" placeholder="Phone" />
+                            </div>
+                            <div>
+                                <input type="text" class="message-box" placeholder="Message" />
+                            </div>
+                            <div class="d-flex">
+                                <button>
+                                    SEND
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end contact section -->
     <!-- Footer -->
     <footer class="text-center text-lg-start text-muted">
         <!-- Section: Social media -->
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
             <!-- Left -->
-            <div class="me-5 d-none d-lg-block">
+            <div class="me-5 d-none d-lg-block" id="socialmedia">
                 <span>Get connected with us on social networks:</span>
             </div>
             <!-- Left -->
@@ -344,7 +390,7 @@
         <!-- Section: Social media -->
 
         <!-- Section: Links  -->
-        <section class="">
+        <section class="" id="contact">
             <div class="container text-center text-md-start mt-5">
                 <!-- Grid row -->
                 <div class="row mt-3">
@@ -440,7 +486,6 @@
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
-
     <script src="path/to/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
@@ -451,5 +496,4 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
