--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html>
 
-<head>
 
-  <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
-  <!-- Basic -->
+<head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+
   <!-- Site Metas -->
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title> मे श्री बाबुराव महादू घोडके सराफ</title>
+  <title>मे श्री बाबुराव महादू घोडके सराफ</title>
 
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+  <!-- Bootstrap Stylesheets -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-  <!-- mdb -->
-
+  <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- Owl Carousel Stylesheet -->
+  <link rel="stylesheet" type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Poppins:400,600,700&display=swap" rel="stylesheet">
-  <!-- Custom styles for this template -->
+  <!-- Fonts Styles -->
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Poppins:400,600,700&display=swap"
+      rel="stylesheet">
 
+  <!-- Custom Styles -->
   <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
 
+  <!-- Responsive Styles -->
+  <link href="css/responsive.css" rel="stylesheet" />
 
 </head>
 
@@ -72,6 +73,7 @@
     <!-- Right -->
   </section>
   <!-- Social media end -->
+  
   <!-- header section start -->
   <header class="navbar sticky-top navbar-light border-bottom" style="background-color: #F8E8C7;">
     <!-- navigation start -->
@@ -83,7 +85,7 @@
         </button>
 
         <!-- Navigation items -->
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse " id="navbarNav" style="margin-top: 5px;">
           <ul class="navbar-nav" style="background-color: #F8E8C7;">
             <li class="nav-item">
               <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link active" aria-current="page"
@@ -94,18 +96,17 @@
                 href="#policies">Policies</a>
             </li>
             <li class="nav-item">
-              <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link" href="#policies">About
+              <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link" href="#about">About
                 Shop</a>
             </li>
 
             <li class="nav-item">
-              <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link" href="#objectives">Market
+              <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link" href="#demands">Market
                 Demands</a>
             </li>
           </ul>
           <a href="/">
-            <!-- <img src="images/logo.png" alt="logo.png" class="logo mx-auto reg-logo"> -->
-            <img src="images/logo.png" alt="logo.png" class="logo mx-auto reg-logo">
+            <img src="images/logo.png" alt="logo.png" class="logo mx-auto reg-logo " > 
           </a>
           <ul class="navbar-nav" style="background-color: #F8E8C7;">
             <li class="nav-item">
@@ -301,7 +302,7 @@
       </div>
     </div>
     <br><br>
-    <div class="about-container" id="objectives">
+    <div class="about-container" id="demands">
       <div class="container ">
         <div class="row">
           <div class="col-md-6">
@@ -371,8 +372,6 @@
         </div>
       </div>
     </div>
-
-
   </section>
   <!-- end about section -->
 
