--- a/views/admin-login.ejs
+++ b/views/admin-login.ejs
@@ -114,11 +114,11 @@
     </header>
 
     <!-- Login Start -->
-    <section class="vh-100" style="background-color: #F8E8C7;">
+    <section class="mt-0" style="background-color: #F8E8C7;">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-xl-10">
-                    <div class="card" style="border-radius: 1rem;background-color: #f4c895d7;">
+                    <div class="card" style="border-radius: 1rem; background-color: #f4c895d7;">
                         <div class="row g-0">
                             <div class="col-md-6 col-lg-5 d-none d-md-block">
                                 <img src="images/logo.png" alt="login form" class="img-fluid"
@@ -128,19 +128,18 @@
                                 <div class="card-body p-4 p-lg-5 text-black">
                                     <form action="/signin" method="post">
                                         <div class="form-outline mb-4">
-                                            <label class="form-label" for="adminUsername">Email address</label>
+                                            <label class="form-label" for="adminUsername" >Email address</label>
                                             <input type="text" id="adminUsername" name="username"
                                                 class="form-control form-control-lg" />
                                         </div>
                                         <div class="form-outline mb-4">
                                             <label class="form-label" for="adminPassword">Password</label>
                                             <input type="password" id="adminPassword" name="password"
-                                                class="form-control form-control-lg" />
+                                                class="form-control form-control-lg " />
                                         </div>
                                         <div class="pt-1 mb-4">
-                                            <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                                            <button class="btn btn-secondary btn-lg btn-block" type="submit">Login</button>
                                         </div>
-                                        <p>Don't have an account? <a href="/register">Register here</a></p>
                                         <a href="#!" class="small text-muted">Terms of use.</a>
                                         <a href="#!" class="small text-muted">Privacy policy</a>
                                     </form>
