--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,28 +2,334 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Registration</title>
+
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <!-- Basic -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Site Metas -->
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+
+    <title> मे श्री बाबुराव महादू घोडके सराफ</title>
+
+    <!-- slider stylesheet -->
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+
+    <!-- mdb -->
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <!-- fonts style -->
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Poppins:400,600,700&display=swap"
+        rel="stylesheet">
+    <!-- Custom styles for this template -->
+
+    <link href="css/style.css" rel="stylesheet" />
+    <!-- responsive style -->
+    <link href="css/responsive.css" rel="stylesheet" />
+
+    <style>
+        #recentItemsContainer {
+            display: block;
+            opacity: 0;
+        }
+    </style>
+
 </head>
 
-<body>
-    <h2>User Registration</h2>
-    <form action="/register" method="post">
-        <label for="mobileNumber">Mobile Number:</label>
-        <input type="text" name="mobileNumber" required><br>
+<body >
 
-        <label for="username">Username:</label>
-        <input type="text" name="username" required><br>
+    <!-- Social media start -->
+    <section class="d-flex justify-content-center justify-content-lg-between pl-1 mt-1 border-bottom ">
+        <!-- Left -->
+        <div class="me-5 d-none d-lg-block">
+            <span class="brand-name">मे श्री बाबुराव महादू घोडके सराफ</span>
+        </div>
 
-        <label for="password">Password:</label>
-        <input type="password" name="password" required><br>
+        <!-- Right -->
+        <div class="top-navbar">
+            <a href="tel:+91 7888124488" target="_blank" class="me-4 text-reset">
+                <i class="fas fa-phone"></i>
+            </a>
+            <a href="https://www.facebook.com/BmGhodkeJewellers?mibextid=2JQ9oc" target="_blank"
+                class="me-4 text-reset">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://www.instagram.com/ms_baburao_mahadu_ghodke_saraf?igsh=aWF3eTgxemlpbzh4" target="_blank"
+                class="me-4 text-reset">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://wa.me/7888124488" target="_blank" class="me-4 text-reset">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+            <a href="" class="me-4 text-reset" target="_blank">
+                <i class="fab fa-telegram"></i>
+            </a>
+            <a href="admin-login" class="me-4 text-reset" target="_blank">
+                <i class="fas fa-circle-user"></i>
+            </a>
+        </div>
+        <!-- Right -->
+    </section>
+    <!-- Social media end -->
 
-        <label for="retypePassword">Retype Password:</label>
-        <input type="password" name="retypePassword" required><br>
+    <header class="header_section">
+        <!-- navigation start -->
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg custom_nav-container justify-content-center">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link active"
+                            aria-current="page" href="\">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
+                            href="jewellery">Products</a>
+                    </li>
+                </ul>
+                <a href="\">
+                    <img src="images/logo.png" alt="logo.png" class="logo">
+                </a>
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
+                            href="about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a style="color: #9D130F; font-weight:600; font-size : 16px" class="nav-link"
+                            href="Schemes">what we offer</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <!-- nevigation end -->
+    </header>
 
-        <button type="submit">Register</button>
-    </form>
+    <section class="vh-100" style="background-color: #F8E8C7;">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-lg-12 col-xl-11">
+                    <div class="card text-black" style="border-radius: 25px;">
+                        <div class="card-body p-md-5" style="background-color: #F8E8C7;">
+                            <div class="row justify-content-center">
+                                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+
+                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+
+                                    <form class="mx-1 mx-md-4" action="/register" method="post">
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <label class="form-label" for="mobileNumber">Mobile Number</label>
+                                                <input type="text" name="mobileNumber" id="form3Example1c"
+                                                    class="form-control" />
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <label class="form-label" for="username">Your Email</label>
+                                                <input type="email" id="form3Example3c" class="form-control"
+                                                    name="username" />
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <label class="form-label" for="password">Password</label>
+                                                <input type="password" id="form3Example4c" name="password"
+                                                    class="form-control" />
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <label class="form-label" for="retypePassword">Repeat your
+                                                    password</label>
+                                                <input type="password" id="form3Example4cd" name="retypePassword"
+                                                    class="form-control" />
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                            <button type="submit" class="btn btn-primary btn-lg">Register</button>
+                                        </div>
+
+                                    </form>
+
+                                </div>
+                                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+
+                                    <img src="images/logo.png"
+                                        class="img-fluid" alt="Sample image">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="text-center text-lg-start text-muted">
+        <!-- Section: Social media -->
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+            <!-- Left -->
+            <div class="me-5 d-none d-lg-block">
+                <span>Get connected with us on social networks:</span>
+            </div>
+            <!-- Left -->
+
+            <!-- Right -->
+            <div>
+                <a href="tel:+91 7888124488" target="_blank" class="me-4 text-reset">
+                    <i class="fas fa-phone"></i>
+                </a>
+                <a href="https://www.facebook.com/BmGhodkeJewellers?mibextid=2JQ9oc" target="_blank"
+                    class="me-4 text-reset">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://www.instagram.com/ms_baburao_mahadu_ghodke_saraf?igsh=aWF3eTgxemlpbzh4" target="_blank"
+                    class="me-4 text-reset">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://wa.me/7888124488" target="_blank" class="me-4 text-reset">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+                <a href="" class="me-4 text-reset" target="_blank">
+                    <i class="fab fa-telegram"></i>
+                </a>
+                <a href="" class="me-4 text-reset" target="_blank">
+                    <i class="fas fa-circle-user"></i>
+                </a>
+            </div>
+            <!-- Right -->
+        </section>
+        <!-- Section: Social media -->
+
+        <!-- Section: Links  -->
+        <section class="">
+            <div class="container text-center text-md-start mt-5">
+                <!-- Grid row -->
+                <div class="row mt-3">
+                    <!-- Grid column address -->
+                    <div class="col-md-6 col-lg-4 col-xl-4 mx-auto mb-4">
+                        <!-- Links -->
+                        <h5 class="text-uppercase fw-bold mb-4">
+                            Address
+                        </h5>
+                        <p>
+                            Zenda Chowk, Bazaar Peth, <br>
+                            Lasalgaon, Tel-Niphad, <br>
+                            Dist-Nashik, Maharashtra 422306
+                        </p>
+                    </div>
+                    <!-- Grid column address -->
+
+                    <!-- Grid column contact -->
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <!-- Links -->
+                        <h5 class="text-uppercase fw-bold mb-4">Contact</h5>
+                        <hr>
+                        <p>
+                            <i class="fas fa-envelope me-3"></i>
+                            <a class="text-reset" href="mailto:info@example.com">bmg.saraf@gmail.com</a>
+                        </p>
+                        <p><i class="fas fa-phone me-3"></i> <a class="text-reset" href="tel:+91 7888124488">+91
+                                7888124488</a></p>
+                    </div>
+                    <!-- Grid column contact -->
+
+                    <!-- Grid column products -->
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+                        <h5 class="text-uppercase fw-bold mb-4">
+                            Products
+                        </h5>
+                        <p>
+                            <a href="jewellery#Regular" class="text-reset">Regular</a>
+                        </p>
+                        <p>
+                            <a href="jewellery#Temple" class="text-reset">Temple</a>
+                        </p>
+                        <p>
+                            <a href="jewellery#Kundan" class="text-reset">Kundan</a>
+                        </p>
+                        <p>
+                            <a href="jewellery#Diamond" class="text-reset">Diamond</a>
+                        </p>
+                        <p>
+                            <a href="jewellery#Kisna" class="text-reset">Kisna</a>
+                        </p>
+                        <p>
+                            <a href="jewellery#Silver" class="text-reset">Silver</a>
+                        </p>
+
+                    </div>
+                    <!-- Grid column products -->
+
+                    <!-- Grid column navigation -->
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+                        <h5 class="text-uppercase fw-bold mb-4">
+                            Useful links
+                        </h5>
+                        <p>
+                            <a href="#!" class="text-reset">Home</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">About Us</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Our Products</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Our Schemes</a>
+                        </p>
+                    </div>
+                    <!-- Grid column navigation -->
+                </div>
+                <!-- Grid row -->
+            </div>
+        </section>
+        <!-- Section: Links  -->
+
+        <!-- Copyright -->
+        <section class="container-fluid footer_section" style="background-color: #F8E8C7;">
+            <p>
+                &copy; <span id="displayYear"></span> All Rights Reserved By
+                <a href="#">BMGhodakejewellers</a>
+            </p>
+        </section>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+
+    <script src="path/to/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/back_to_top.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
